--- a/README
+++ b/README
@@ -66,3 +66,7 @@ version 1.30    Bibtex style now recognizes https:// in doi.
 		\department now has an optional hierarchy level.
 		Switched to T1 encoding
 		Updated IMWUT and PACMPL
+
+version 1.31    Changed default year and month to the current ones
+		(Matteo Riondato)
+		Table of contents now works
