--- a/acmart.dtx
+++ b/acmart.dtx
@@ -498,24 +498,52 @@
 % \end{verbatim}
 %  However, this format is not generally recommended.
 %
-%  \DescribeMacro{\position}%
-%  \DescribeMacro{\institution}%
-%  \DescribeMacro{\department}%
-%  \DescribeMacro{\streetaddress}%
-%  \DescribeMacro{\city}%
-%  \DescribeMacro{\state}%
-%  \DescribeMacro{\postcode}%
-%  \DescribeMacro{\country}%
-%  The \cs{affiliation} command is further structured to interact with
-%  the metadata extraction tools.  Inside the this command you should
-%  use \cs{position}, \cs{institution}, \cs{department}, \cs{city},
-%  \cs{streetaddress}, \cs{state}, \cs{postcode} and \cs{country}
-%  macros to indicate the corresponding parts of the affiliation.
-%  Note that in some cases (for example, journals) these parts are not
-%  printed in the resulting copy, but they \emph{are} necessary since
-%  they are used by the XML metadata extraction programs.  Do
-%  \emph{not} put commas or |\\| between the elements of
-%  \cs{affiliation}: they will be provided automatically.
+% \DescribeMacro{\additionalaffiliation}%
+% In some cases too many affiliations take too much space.  The
+% command \cs{additionalaffiliation}\marg{affiliation} creates a
+% footnote after author's name with the words ``Also with
+% \marg{affiliation}''.  You should use this command only as the last
+% resort.  An example of usage is:
+% \begin{verbatim}
+% \author{G. Tobin}
+% \author{Ben Trovato}
+% \additionalaffiliation{%
+%   \institution{The Th{\o}rv{\"a}ld Group}
+%   \streetaddress{1 Th{\o}rv{\"a}ld Circle}
+%   \city{Hekla} 
+%   \country{Iceland}}
+% \affiliation{%
+%   \institution{Institute for Clarity in Documentation}
+%   \streetaddress{P.O. Box 1212}
+%   \city{Dublin} 
+%   \state{Ohio} 
+%   \postcode{43017-6221}
+% }
+% \end{verbatim}
+% Here Trovato and Tobin share their affiliation with the Institute
+% for Clarity in Documentation, but only Ben Trovato is affiliated
+% with The Th{\o}rv{\"a}ld Group.  
+%
+%
+% \DescribeMacro{\position}%
+% \DescribeMacro{\institution}%
+% \DescribeMacro{\department}%
+% \DescribeMacro{\streetaddress}%
+% \DescribeMacro{\city}%
+% \DescribeMacro{\state}%
+% \DescribeMacro{\postcode}%
+% \DescribeMacro{\country}%
+% The \cs{affiliation} and \cs{additionalaffiliation} commands are
+% further structured to interact with the metadata extraction tools.
+% Inside the this command you should use \cs{position},
+% \cs{institution}, \cs{department}, \cs{city}, \cs{streetaddress},
+% \cs{state}, \cs{postcode} and \cs{country} macros to indicate the
+% corresponding parts of the affiliation.  Note that in some cases
+% (for example, journals) these parts are not printed in the resulting
+% copy, but they \emph{are} necessary since they are used by the XML
+% metadata extraction programs.  Do \emph{not} put commas or |\\|
+% between the elements of \cs{affiliation}: they will be provided
+% automatically.
 %
 %
 % An example of the author block:
@@ -2863,6 +2891,31 @@ Computing Machinery]
   \fi}
 %    \end{macrocode}
 %
+% \end{macro}
+%
+% \begin{macro}{\additionalaffiliation}
+% \changes{v1.31}{2017/03/04}{Added macro}
+%   Additional affiliations go to footnotes
+%    \begin{macrocode}
+\def\additionalaffiliation#1{\authornote{\@additionalaffiliation{#1}}}
+%    \end{macrocode}
+%   
+% \end{macro}
+%
+% \begin{macro}{\@additionalaffiliation}
+% \changes{v1.31}{2017/03/04}{Added macro}
+%   Process additionalaffiliation inside \cs{authornote}
+\def\@additionalaffiliation#1{\bgroup
+  \def\position##1{\ignorespaces}%
+  \def\institution##1{##1\ignorespaces}%
+  \def\department{\@ifnextchar[{\@department}{\@department[]}}%
+  \def\@department[##1]##2{\unskip, ##2\ignorespaces}%
+  \let\streetaddress\position
+  \let\city\position
+  \let\state\position
+  \let\postcode\position
+  \let\country\position
+  Also with #1\unskip.\egroup}
 % \end{macro}
 %
 % \begin{macro}{\email}
