--- a/README
+++ b/README
@@ -72,3 +72,4 @@ version 1.31    Changed default year and month to the current ones
 		Table of contents now works
 		Marginalia now work in all formats
 		New command \additionalaffiliation
+		Documentation changes
