--- a/acmart.dtx
+++ b/acmart.dtx
@@ -117,6 +117,12 @@
 % relatively recent packages, especially the ones related to the
 % fonts.
 %
+% The latest released version of the package can be found on CTAN:
+% \url{https://www.ctan.org/pkg/acmart}.   The development version can
+% be found on GitHub: \url{https://github.com/borisveytsman/acmart}.
+% At this address you can file a bug report---or even contribute your
+% own enhancement making a pull request.
+%
 % If you decide to install the package yourself, follow the standard
 % rules:
 % \begin{enumerate}
@@ -1388,7 +1394,9 @@ Computing Machinery]
 % \changes{v1.26}{2016/12/24}{Corrected \cs{shortcite} bug}
 % \changes{v1.26}{2016/12/24}{Documentation typos fixed (thanks to
 % Stephen Spencer)} 
-% \changes{v1.30}{2017/02/04}{Bibtex style now recognizes https:// in doi} 
+% \changes{v1.30}{2017/02/04}{Bibtex style now recognizes https:// in
+% doi} 
+% \changes{v1.31}{2017/03/04}{Documentation changes} 
 %
 %
 % And the driver code:
@@ -2905,6 +2913,7 @@ Computing Machinery]
 % \begin{macro}{\@additionalaffiliation}
 % \changes{v1.31}{2017/03/04}{Added macro}
 %   Process additionalaffiliation inside \cs{authornote}
+%    \begin{macrocode}
 \def\@additionalaffiliation#1{\bgroup
   \def\position##1{\ignorespaces}%
   \def\institution##1{##1\ignorespaces}%
@@ -2916,6 +2925,7 @@ Computing Machinery]
   \let\postcode\position
   \let\country\position
   Also with #1\unskip.\egroup}
+%    \end{macrocode}
 % \end{macro}
 %
 % \begin{macro}{\email}
