--- a/README
+++ b/README
@@ -77,3 +77,4 @@ version 1.31    Changed default year and month to the current ones
 version 1.32    New DOI formatting.
 		Format siggraph is now obsolete, and sigconf
 		is used instead.
+		New proceedings title: POMACS.
