--- a/acmart.dtx
+++ b/acmart.dtx
@@ -1438,6 +1438,7 @@ Computing Machinery]
 % \changes{v1.31}{2017/03/04}{Documentation changes} 
 % \changes{v1.32}{2017/03/07}{Format siggraph is now obsolete} 
 % \changes{v1.32}{2017/03/07}{Added POMACS journal option} 
+% \changes{v1.33}{2017/03/12}{BibTeX crossref bug corrected} 
 %
 %
 % And the driver code:
