--- a/README
+++ b/README
@@ -1,6 +1,10 @@
 This package provides a class for typesetting publications of 
 Association for Computing Machinery.
 
+Your TeX distribution probably includes the latest released version of
+this package.  If you decide to install it yourself, please see
+Installation section of the User's Guide.
+
 Changes
 
 version 1.08    SIGPLAN reformatting (Matthew Fluet); bug fixes
