--- a/acmart.dtx
+++ b/acmart.dtx
@@ -123,8 +123,10 @@
 % At this address you can file a bug report---or even contribute your
 % own enhancement making a pull request.
 %
-% If you decide to install the package yourself, follow the standard
-% rules:
+%
+% Most users should not attempt to install this package themselves,
+% and rather rely on their \TeX\ distributions to provide it.  If you
+% decide to install the package yourself, follow the standard rules:
 % \begin{enumerate}
 % \item Run \progname{latex} on |acmart.ins|.  This will produce the file
 % |acmart.cls|.
