--- a/README
+++ b/README
@@ -86,4 +86,5 @@ version 1.32    New DOI formatting.
 version 1.33    New option `timestamp' (Michael D. Adams)
                 Documentation updates
 		Bug fixes
-		
+		We now use Type 1 versions of Libertine fonts even with
+		XeTeX.
