Fix missing close parentheses in documentation.

--- a/acmart.dtx
+++ b/acmart.dtx
@@ -3450,7 +3450,7 @@ Computing Machinery]
 % \changes{v1.29}{2017/01/22}{Add spacing after bullet and around
 % rightarrow; semicolon separators no longer in bold/italic (John Wickerson)}
 %   The parser of the expression |Significance~General~Specific| (we need
-%   |textcomp| for |\\textrightarrow|:
+%   |textcomp| for |\\textrightarrow|):
 %    \begin{macrocode}
 \RequirePackage{textcomp}
 \def\ccsdesc@parse#1~#2~#3~{%
@@ -5361,7 +5361,7 @@ Computing Machinery]
 % The command \cs{showeprint} has two arguments: the (optional) prefix
 % and the eprint number.  Right now the only prefix we understand is
 % the (lowercase) word `arxiv' (see
-% \url{http://arxiv.org/hypertex/bibstyles/}.
+% \url{http://arxiv.org/hypertex/bibstyles/}).
 %    \begin{macrocode}
 \newcommand\showeprint[2][arxiv]{%
   \def\@tempa{#1}%
