Fixed typo in bibliography

--- a/acmart.dtx
+++ b/acmart.dtx
@@ -130,7 +130,7 @@
 % \begin{enumerate}
 % \item Run \progname{latex} on |acmart.ins|.  This will produce the file
 % |acmart.cls|.
-% \item Put the file |acmart.cls| and the bibligoraphy files |*.bst|
+% \item Put the file |acmart.cls| and the bibliography files |*.bst|
 %   to the places where \LaTeX{} can find them (see \cite{TeXFAQ} or
 %   the documentation for your \TeX{} system).\label{item:install}
 % \item Update the database of file names.  Again, see \cite{TeXFAQ}
