--- a/acmart.dtx
+++ b/acmart.dtx
@@ -1393,7 +1393,7 @@
 \ProvidesFile{acmart.dtx}
 %</gobble>
 %<class>\ProvidesClass{acmart}
-[2017/03/12 v1.33 Typesetting articles for Association of
+[2017/03/18 v1.33 Typesetting articles for Association of
 Computing Machinery]
 %    \end{macrocode}
 %
@@ -1440,6 +1440,7 @@ Computing Machinery]
 % \changes{v1.32}{2017/03/07}{Format siggraph is now obsolete} 
 % \changes{v1.32}{2017/03/07}{Added POMACS journal option} 
 % \changes{v1.33}{2017/03/12}{BibTeX crossref bug corrected} 
+% \changes{v1.33}{2017/03/18}{BibTeX comma before articleno bug corrected} 
 %
 %
 % And the driver code:
