--- a/acmart.dtx
+++ b/acmart.dtx
@@ -1440,7 +1440,9 @@ Computing Machinery]
 % \changes{v1.32}{2017/03/07}{Format siggraph is now obsolete} 
 % \changes{v1.32}{2017/03/07}{Added POMACS journal option} 
 % \changes{v1.33}{2017/03/12}{BibTeX crossref bug corrected} 
-% \changes{v1.33}{2017/03/18}{BibTeX comma before articleno bug corrected} 
+% \changes{v1.33}{2017/03/18}{BibTeX comma before articleno bug
+% corrected} 
+% \changes{v1.33}{2017/03/18}{BibTeX numpages bug corrected} 
 %
 %
 % And the driver code:
