Use the correct font for cm-super.

--- a/acmart.dtx
+++ b/acmart.dtx
@@ -155,7 +155,7 @@
 % \item \textsl{binhex}, \url{http://www.ctan.org/pkg/binhex}
 % \item \textsl{caption}, \url{http://www.ctan.org/pkg/caption}
 % \item \textsl{comment}, \url{http://www.ctan.org/pkg/comment}
-% \item \textsf{cm-super}, \url{http://www.ctan.org/pkg/cm-super}
+% \item \textsl{cm-super}, \url{http://www.ctan.org/pkg/cm-super}
 % \item \textsl{environ}, \url{http://www.ctan.org/pkg/environ}
 % \item \textsl{fancyhdr}, \url{http://www.ctan.org/pkg/fancyhdr}
 % \item \textsl{float}, \url{http://www.ctan.org/pkg/float}
